--- a/src/scss/common/_reset.scss
+++ b/src/scss/common/_reset.scss
@@ -3,6 +3,7 @@
 body {
     background-color: $white-light;
     font-size: $base-font;
+    overflow-x: hidden;
 }
 
 html, body {
