--- a/src/scss/components/_input.scss
+++ b/src/scss/components/_input.scss
@@ -3,7 +3,7 @@
 .form-control {
     height: 40px;
     padding: 5px 8px;
-    min-width: 300px;
+    min-width: 170px;
     border-radius: 0;
 }
 
@@ -14,6 +14,8 @@
     .form-control {
         background-color: transparent;
         border: 1px solid $white;
+        width: 100%;
+        max-width: 250px;
     }
 
     .btn {
